--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "youtube-project",
   "version": "1.0.0",
   "description": "a youtube project backend with chai aur code",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +14,8 @@
     "youtube"
   ],
   "author": "Kalpan Bariya",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
